<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.viatom.lpble.viewmodels.ConnectViewModel" />
        <variable
            name="ctx"
            type="com.viatom.lpble.ui.ConnectDialog" />

    </data>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:paddingBottom="47dp"
        android:background="@color/color_FF1C1C1E">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/refresh"
            style="@style/h_18text"
            android:text="@string/refresh"
            android:paddingHorizontal="18dp"
            android:paddingVertical="4dp"
            android:background="@drawable/public_shape_corner_12"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{() ->ctx.refresh()}"


            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/refresh"
            android:text="@string/choose_device"
            style="@style/h_24text"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp" />



<!--        <ProgressBar-->
<!--            android:id="@+id/progress.bar"-->
<!--            style="?android:progressBarStyleSmall"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginLeft="20dp"-->
<!--            android:indeterminateDrawable="@drawable/circle_progressbar"-->
<!--            android:indeterminateDuration="50"-->
<!--            android:visibility="invisible"-->
<!--            app:layout_constraintTop_toTopOf="@id/refresh"-->
<!--            app:layout_constraintEnd_toStartOf="@id/refresh"-->
<!--            app:layout_constraintBottom_toBottomOf="@id/refresh"-->
<!--            android:layout_marginEnd="2dp"-->
<!--            />-->


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/label"
            app:layout_constraintTop_toBottomOf="@+id/refresh"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            android:text="@string/current_device"
            style="@style/b_14text" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/public_shape_corner_12"
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@id/label"
            android:paddingHorizontal="13dp"
            android:paddingVertical="15dp"
            android:id="@+id/connected">

            <TextView
                android:id="@+id/connected.name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/h_18text"
                tools:text="ER 00000" />

            <TextView
                android:id="@+id/connected.state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connected"
                android:layout_marginEnd="7dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/h_18text"
                android:onClick="@{() -> ctx.reconnect() }"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="其他设备"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/connected"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:id="@+id/label1"
            style="@style/b_14text" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="204dp"
            app:layout_constraintTop_toBottomOf="@id/label1"
            android:background="@drawable/public_shape_corner_12"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="16dp"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/device.list"

                />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
